resolved deprecated warnings