@@ -33,7 +33,7 @@ public abstract class TestMessagesAbstract extends TestMessagesParent
 
       Assert.assertEquals(getExpected(BASE + "00", "cannotGuessCollectionType"), Messages.MESSAGES.cannotGuessCollectionType());
       Assert.assertEquals(getExpected(BASE + "20", "discoveryFailedForMethod", "class", "method", "s"), Messages.MESSAGES.discoveryFailedForMethod("class", "method", "s"));
-      Assert.assertEquals(getExpected(BASE + "35", "failedToInjectLinks", new Integer(17)), Messages.MESSAGES.failedToInjectLinks(new Integer(17)));
+      Assert.assertEquals(getExpected(BASE + "35", "failedToInjectLinks", Integer.valueOf(17)), Messages.MESSAGES.failedToInjectLinks(Integer.valueOf(17)));
       Assert.assertEquals(getExpected(BASE + "60", "notEnoughtUriParameters", 3, 5), Messages.MESSAGES.notEnoughtUriParameters(3, 5));
    }
 
