@@ -8,6 +8,6 @@ import java.io.IOException;
 public class RequestFilterAbortWith implements ClientRequestFilter {
    @Override
    public void filter(ClientRequestContext requestContext) throws IOException {
-      requestContext.abortWith(Response.ok(new Integer(42)).build());
+      requestContext.abortWith(Response.ok(Integer.valueOf(42)).build());
    }
 }
